# slownik-wyrazow-obcych

./: .gitignore  README.md  Untitled.ipynb  anki-deck.csv  definitions.pkl  pyproject.toml  scrape-and-create-thesaurus.ipynb  thesaurus.csv
