[tool.poetry]
name = "scrape-polskie-wyrazy-obce"
version = "0.1.0"
description = ""
authors = ["RBialowas <radoslaw.bialowas@boostcom.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.10.0"
jupyter = "^1.0.0"
requests = "^2.27.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
